--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,82 @@
-// TODO
+.mainContainer{
+  margin-left: 370px;
+}
+
+.postBoard{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 48px;
+
+  h1{
+    font-family: Inter;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 34px;
+    letter-spacing: -0.5px;
+    text-align: justified;
+    margin-bottom: 8px;
+  }
+
+  h2{
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: justified;
+  }
+}
+
+.postInfo{
+  display: flex;
+  margin-top: 25px;
+
+  div+div{
+    margin-left: 28px;
+  }
+}
+
+.postData{
+  display: flex;
+
+  p{
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: left;
+    margin-left: 10.5px;
+  }
+}
+
+.postAutor{
+  display: flex;
+
+  p{
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: left;
+    margin-left: 10.5px;
+  }
+}
+
+.loadPosts{
+  background: var(--background);
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: justify;
+  height: 22px;
+  color: var(--highlight);
+  margin-top: 18px;
+}
